<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Q_app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pseudo"> Pseudo </string>
    <string name="nouveauJoueur"> Nouveau joueur </string>
    <string name="ancienJoueur"> Ancien joueur </string>
    <string name="mode1"> Survival </string>
    <string name="mode2"> Campagne </string>
    <string name="mode3"> Partie rapide </string>
    <string name="Mscore"> Meilleurs scores </string>
    <string name="Quitter"> Quitter </string>
    <string name="retour"> Retour </string>
    <string name="effacer"> Effacer </string>
    <string name="jouer"> Jouer</string>
    <string name="reponse"> Reponse</string>
    <string name="GO"> GO</string>
    <string name="title_activity_avancement_mode_normal">avancementModeNormal</string>
    <string name="title_activity_choix_categorie_layout">ChoixCategorieLayout</string>
    <string name="title_activity_choix_joueur_mode_survie">ChoixJoueurModeSurvie</string>

    <string name="title_activity_enigme_layout">EnigmeLayout</string>
    <string name="title_activity_question3r">Question3r</string>
    <string name="title_activity_question4r">Question4r</string>
    <string name="title_activity_question5r">Question5r</string>
    <string name="title_activity_scores">Scores</string>

    <string-array name="categories">
        <item>Sports</item>
        <item>Cinéma &amp; TV</item>
        <item>Musique</item>
        <item>Histoire</item>
        <item>Faune &amp; flore</item>
        <item>Sciences</item>
        <item>Mythologie</item>
        <item>Langues</item>
    </string-array>

    <string name="title_activity_shit">MainActivityg</string>
    <string name="title_activity_question6r">Question6r</string>
    <string name="title_activity_question8r">Question8r</string>
    <string name="title_activity_ok">MainActivity</string>
    <string name="title_activity_survival_activity">MainActivity</string>

    <string name="niveau"> Niveau </string>
    <string name="ang"> English</string>
    <string name="fra"> Français</string>
    <string name="choixLangue"> Langue du jeu </string>


</resources>
